# SureInstinct

./: .gitignore  LICENSE.md  README.md  package.json
aoba-build/: CMakeLists.txt
aoba-build/src/: CMakeLists.txt
aoba-build/src/cli/: CMakeLists.txt
aoba-build/src/cli/src/: main.cpp
aoba-build/src/fontgen/: CMakeLists.txt
aoba-build/src/fontgen/src/: main.cpp
aoba-build/src/libaoba/: CMakeLists.txt
aoba-build/src/libaoba/src/asset/: Asset.cpp  AssetByteListLinker.cpp  AssetLinkerObject.cpp
aoba-build/src/libaoba/src/character/: Character.cpp  CharacterConfig.cpp  CharacterFlagsComponent.cpp  CharacterSpriteComponent.cpp
aoba-build/src/libaoba/src/compress/: BgTileCompressor.cpp  BgTileWriter.cpp  DialogTilesWriter.cpp  LargeMapTilesWriter.cpp  Lz77Compressor.cpp  Lz77Writer.cpp  MapTilesWriter.cpp  SimplePaletteWriter.cpp
aoba-build/src/libaoba/src/font/: Font.cpp  FontLetterRegistry.cpp  FontRegistry.cpp  MonospaceFont.cpp  PngFontGenerator.cpp  VariableFont.cpp  VariableFontBuilder.cpp  VariableFontLoader.cpp
aoba-build/src/libaoba/src/image/: BgTileImageLoader.cpp  Image.cpp  ImageAccessor.cpp  ImageCollection.cpp  ImageConfig.cpp  ImageList.cpp  ImageMapSplitter.cpp  ImageMapSplitterState.cpp  PaletteImageAccessor.cpp  QImageAccessor.cpp  RawImage.cpp  RawImageConfig.cpp  RgbaImageAccessor.cpp  SnesPaletteImage.cpp
aoba-build/src/libaoba/src/instrument/: Instrument.cpp
aoba-build/src/libaoba/src/level/: Level.cpp  LevelConfig.cpp  LevelCustomPropertiesComponent.cpp  LevelExitComponent.cpp  LevelFlagComponent.cpp  LevelNpcComponent.cpp  LevelPaletteGroupComponent.cpp  LevelScriptComponent.cpp  LevelSwitchComponent.cpp  LevelTilemapComponent.cpp
aoba-build/src/libaoba/src/palette/: Palette.cpp  PaletteGroup.cpp  PaletteGroupAnimationComponent.cpp  SnesPalette.cpp
aoba-build/src/libaoba/src/project/: Project.cpp
aoba-build/src/libaoba/src/property/: GroupPropertyType.cpp  NumberPropertyType.cpp  PositionPropertyType.cpp  PropertyType.cpp  TextPropertyType.cpp  Vector2dPropertyType.cpp
aoba-build/src/libaoba/src/raw/: RawAsset.cpp
aoba-build/src/libaobaaudio/: CMakeLists.txt
aoba-build/src/libaobacore/: CMakeLists.txt
aoba-build/src/libaobascript/: CMakeLists.txt
aoba-build/src/libmaker/: CMakeLists.txt
aoba-build/src/librpg/: CMakeLists.txt
aoba-build/src/maker/: CMakeLists.txt
aoba-build/src/maker/resources/: Resources.qrc
aoba-build/src/maker/src/: GlobalContext.cpp  MainWindow.cpp  main.cpp
aoba-build/src/maker/ui/: CreateNewMapDialog.ui  MainWindow.ui  NpcToolWidget.ui  ResizeMapDialog.ui  ScriptEditor.ui  SpriteEditor.ui  TilesetEditor.ui
aoba-libsft/: CMakeLists.txt
aoba-libsft/include/aoba/yaml/: YamlTools.hpp
aoba-libsft/include/audiofile/: AudioFile.hpp
aoba-libsft/include/sft/: Configuration.hpp
aoba-libsft/include/sft/brr/: BrrCodec.hpp  BrrSample.hpp  BrrSampleChunk.hpp
aoba-libsft/include/sft/channel/: Channel.hpp
aoba-libsft/include/sft/instrument/: Instrument.hpp  InstrumentList.hpp  InstrumentLoader.hpp  YamlInstrumentLoader.hpp
aoba-libsft/include/sft/mml/: MmlBeginLoopCommand.hpp  MmlCommand.hpp  MmlCompiledScript.hpp  MmlExecutedScript.hpp  MmlModifyOctaveCommand.hpp  MmlParser.hpp  MmlParserInterface.hpp  MmlPauseNoteCommand.hpp  MmlPitchNoteCommand.hpp  MmlPlayNoteCommand.hpp  MmlRepeatLoopCommand.hpp  MmlResumeNoteCommand.hpp  MmlScript.hpp  MmlSetAdsrPropertyCommand.hpp  MmlSetEchoEnabledCommand.hpp  MmlSetInstrumentCommand.hpp  MmlSetNoiseEnabledCommand.hpp  MmlSetOctaveCommand.hpp  MmlSetPanningCommand.hpp  MmlSetPitchChannelEnabledCommand.hpp  MmlSetPitchOffsetCommand.hpp  MmlSetTempoCommand.hpp  MmlSetTrackRepeatOffsetCommand.hpp  MmlSetVolumeCommand.hpp  MmlVibratePitchCommand.hpp  MmlWritableCompiledScript.hpp  MmlWritableExecutedScript.hpp
aoba-libsft/include/sft/sample/: BrrSampleLoader.hpp  Sample.hpp  SampleData.hpp  SampleDataReadInterface.hpp  SampleList.hpp  SampleLoader.hpp  SampleWriter.hpp  WavSampleLoader.hpp  WavSampleWriter.hpp
aoba-libsft/include/sft/song/: ItSong.hpp  ItSongLoader.hpp  MmlSongLoader.hpp  MmlSongWriter.hpp  Song.hpp  SongLoader.hpp  SongWriter.hpp  XmSongLoader.hpp
aoba-libsft/include/sft/types/: Color.hpp  ColorPalette.hpp
aoba-libsft/include/sft/utils/: DataStream.hpp
aoba-libsft/src/brr/: BrrCodec.cpp  BrrSample.cpp  BrrSampleChunk.cpp
aoba-libsft/src/channel/: Channel.cpp
aoba-libsft/src/instrument/: Instrument.cpp  InstrumentList.cpp  InstrumentLoader.cpp  YamlInstrumentLoader.cpp
aoba-libsft/src/mml/: MmlBeginLoopCommand.cpp  MmlCompiledScript.cpp  MmlExecutedScript.cpp  MmlModifyOctaveCommand.cpp  MmlParser.cpp  MmlPitchNoteCommand.cpp  MmlPlayNoteCommand.cpp  MmlRepeatLoopCommand.cpp  MmlScript.cpp  MmlSetAdsrPropertyCommand.cpp  MmlSetInstrumentCommand.cpp  MmlSetNoiseEnabledCommand.cpp  MmlSetOctaveCommand.cpp  MmlSetPitchChannelEnabledCommand.cpp  MmlSetPitchOffsetCommand.cpp  MmlSetTempoCommand.cpp  MmlSetVolumeCommand.cpp  MmlVibratePitchCommand.cpp  MmlWritableCompiledScript.cpp  MmlWritableExecutedScript.cpp
aoba-libsft/src/sample/: BrrSampleLoader.cpp  Sample.cpp  SampleData.cpp  SampleList.cpp  SampleLoader.cpp  WavSampleLoader.cpp  WavSampleWriter.cpp
aoba-libsft/src/song/: ItSong.cpp  ItSongLoader.cpp  MmlSongLoader.cpp  MmlSongWriter.cpp  Song.cpp  SongLoader.cpp  XmSongLoader.cpp
aoba-libsft/src/types/: ColorPalette.cpp
aoba-musicstudio/: CMakeLists.txt
aoba-musicstudio/cmake/Modules/: FindLibAobaSft.cmake  FindOSS.cmake  FindYAML.cmake
aoba-musicstudio/samples/: sample00.brr  sample01.brr  sample02.brr  sample03.brr  sample04.brr  sample05.brr  sample06.brr  sample07.brr  synth.brr
aoba-musicstudio/src/: CMakeLists.txt
aoba-musicstudio/src/editor/: CMakeLists.txt  editor.qrc
aoba-musicstudio/src/editor/ui/: InstrumentEditor.ui  MainWindow.ui
aoba-musicstudio/src/libdsp/: CMakeLists.txt
aoba-musicstudio/src/libdsp/src/: dsp.cpp  fir_resampler.cpp  spc_filter.cpp
aoba-musicstudio/src/libruby/: CMakeLists.txt
aoba-musicstudio/src/libruby/src/: ruby.cpp  ruby_impl.hpp
(+1454 files in other folders)
