CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)

PROJECT(aoba)

# Application name
SET(APPLICATION_DOMAIN "dokomi.de")
SET(APPLICATION_ID "aoba")
SET(APPLICATION_NAME "aoba")
SET(APPLICATION_DISPLAY_NAME "Aoba")

# Application Version
SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 1)

# Version String
SET(VERSION_STRING "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET(VERSION_SHORT "${VERSION_STRING}")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Wunused-result -Winit-self -Wno-strict-aliasing -Wcast-align -Wcast-qual -Wuninitialized -Wmissing-declarations -Wnon-virtual-dtor -Werror")

SET(QT_VERSION_MAJOR "5")

SET(DEFAULT_BUILD_TYPE "Debug")
IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  MESSAGE(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
  SET(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
  SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
ENDIF()

IF(AOBA_NO_ASSET_CACHE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAOBA_NO_ASSET_CACHE")
ENDIF()

IF(CMAKE_BUILD_TYPE MATCHES Debug)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
ENDIF()

IF(CMAKE_BUILD_TYPE MATCHES Release)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
ENDIF()

IF (UNIX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIX")
ENDIF (UNIX)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_AUTOUIC ON)
IF(CMAKE_VERSION VERSION_LESS "3.7.0")
  SET(CMAKE_INCLUDE_CURRENT_DIR ON)
ENDIF()

OPTION(BUILD_DOC "Build documentation" OFF)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules")

FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
FIND_PACKAGE(LibAobaSft REQUIRED)
FIND_PACKAGE(LibSamplerate REQUIRED)

ADD_SUBDIRECTORY(src)

IF (BUILD_DOC)
  FIND_PACKAGE(Doxygen)

  IF (DOXYGEN_FOUND)
    SET(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
    SET(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

    CONFIGURE_FILE(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
    ADD_CUSTOM_TARGET(docs ALL
      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT "Generating API documentation with Doxygen"
      VERBATIM )
  ENDIF()
ENDIF()