FILE(GLOB_RECURSE LIBAOBA_SRC src *.cpp)
FILE(GLOB_RECURSE LIBAOBA_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Xml REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)

MESSAGE(${FREETYPE_INCLUDE_DIR_ft2build})

ADD_LIBRARY(libaoba ${LIBAOBA_SRC} ${LIBAOBA_INCLUDE})
TARGET_LINK_LIBRARIES(libaoba PUBLIC Qt5::Core Qt5::Gui Qt5::Xml libaobacore libfma libaobaaudio fmamemory ${FREETYPE_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(libaoba PUBLIC include)
TARGET_INCLUDE_DIRECTORIES(libaoba PUBLIC ${FREETYPE_INCLUDE_DIR_ft2build})
