FILE(GLOB_RECURSE LIBAOBAAUDIO_SRC src *.cpp)
FILE(GLOB_RECURSE LIBAOBAAUDIO_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Xml REQUIRED)

ADD_LIBRARY(libaobaaudio ${LIBAOBAAUDIO_SRC} ${LIBAOBAAUDIO_INCLUDE})
TARGET_LINK_LIBRARIES(libaobaaudio PUBLIC Qt5::Core Qt5::Xml libaobacore ${LIBAOBASFT_LIBRARY} ${LIBSAMPLERATE_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(libaobaaudio PUBLIC include ${LIBAOBASFT_INCLUDE_DIR})
