FILE(GLOB_RECURSE LIBAOBACORE_SRC src *.cpp)
FILE(GLOB_RECURSE LIBAOBACORE_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(YAML REQUIRED)

ADD_LIBRARY(libaobacore ${LIBAOBACORE_SRC} ${LIBAOBACORE_INCLUDE})
TARGET_LINK_LIBRARIES(libaobacore PUBLIC Qt5::Core ${YAML_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(libaobacore PUBLIC include ${YAML_INCLUDES})
