FILE(GLOB_RECURSE LIBAOBASCRIPT_SRC src *.cpp)
FILE(GLOB_RECURSE LIBAOBASCRIPT_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Xml REQUIRED)

ADD_LIBRARY(libaobascript ${LIBAOBASCRIPT_SRC} ${LIBAOBASCRIPT_INCLUDE})
TARGET_LINK_LIBRARIES(libaobascript PUBLIC Qt5::Core Qt5::Gui Qt5::Xml libaoba libfma fmamemory)
TARGET_INCLUDE_DIRECTORIES(libaobascript PUBLIC include)
