FILE(GLOB_RECURSE LIBMAKER_SRC src *.cpp)
FILE(GLOB_RECURSE LIBMAKER_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Xml REQUIRED)

ADD_LIBRARY(libmaker ${LIBMAKER_SRC} ${LIBMAKER_INCLUDE})
TARGET_LINK_LIBRARIES(libmaker PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets libaoba libaobascript librpg)
TARGET_INCLUDE_DIRECTORIES(libmaker PUBLIC include)
