FILE(GLOB_RECURSE LIBRPG_SRC src *.cpp)
FILE(GLOB_RECURSE LIBRPG_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Xml REQUIRED)

ADD_LIBRARY(librpg ${LIBRPG_SRC} ${LIBRPG_INCLUDE})
TARGET_LINK_LIBRARIES(librpg PUBLIC Qt5::Core Qt5::Gui Qt5::Xml libaobacore libaoba libfma fmamemory)
TARGET_INCLUDE_DIRECTORIES(librpg PUBLIC include)
