FILE(GLOB_RECURSE EDITOR_SRC src *.cpp)
FILE(GLOB_RECURSE EDITOR_HEADER include *.hpp)
FILE(GLOB_RECURSE EDITOR_UI include *.ui)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_AUTOUIC_SEARCH_PATHS ui)

FIND_PACKAGE(Qt5Core 5.6 REQUIRED)
FIND_PACKAGE(LibSamplerate REQUIRED)
FIND_PACKAGE(LibAobaSft REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Multimedia REQUIRED)
FIND_PACKAGE(YAML REQUIRED)

#QT5_CREATE_TRANSLATION(QM_FILES ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/locale/en.ts OPTIONS)
#CONFIGURE_FILE(translations.qrc ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

ADD_EXECUTABLE(audioeditor
  ${EDITOR_SRC}
  ${EDITOR_HEADER}
  ${EDITOR_UI}
  ${QM_FILES}
#  ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc
  editor.qrc
)

TARGET_LINK_LIBRARIES(audioeditor Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Multimedia ${LIBAOBASFT_LIBRARY} ${LIBSAMPLERATE_LIBRARY} libdsp libruby ${YAML_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(audioeditor PUBLIC include)
TARGET_INCLUDE_DIRECTORIES(audioeditor PRIVATE ${LIBAOBASFT_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(audioeditor PRIVATE
  APPLICATION_DOMAIN="${APPLICATION_DOMAIN}"
  APPLICATION_ID="${APPLICATION_ID}"
  APPLICATION_NAME="${APPLICATION_NAME}"
  APPLICATION_DISPLAY_NAME="${APPLICATION_DISPLAY_NAME}"
  VERSION_STRING="${VERSION_STRING}"
)