FILE(GLOB_RECURSE LIBRUBY_SRC src *.cpp)
FILE(GLOB_RECURSE LIBRUBY_INCLUDE include *.hpp)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(ALSA)
FIND_PACKAGE(OpenAL)
FIND_PACKAGE(OSS)

ADD_LIBRARY(libruby ${LIBRUBY_SRC} ${LIBRUBY_INCLUDE})
TARGET_INCLUDE_DIRECTORIES(libruby PUBLIC include)

IF (ALSA_FOUND)
  TARGET_COMPILE_DEFINITIONS(libruby PRIVATE AUDIO_ALSA)
  TARGET_LINK_LIBRARIES(libruby PUBLIC ${ALSA_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(libruby PRIVATE ${ALSA_INCLUDE_DIR})
ENDIF()

IF (OPENAL_FOUND)
  TARGET_COMPILE_DEFINITIONS(libruby PRIVATE AUDIO_OPENAL)
  TARGET_LINK_LIBRARIES(libruby PUBLIC ${OPENAL_LIBRARY})
  TARGET_INCLUDE_DIRECTORIES(libruby PRIVATE ${OPENAL_INCLUDE_DIR})
ENDIF()

IF (OSS_FOUND)
  TARGET_COMPILE_DEFINITIONS(libruby PRIVATE AUDIO_OSS)
  TARGET_INCLUDE_DIRECTORIES(libruby PRIVATE ${OSS_INCLUDE_DIR})
ENDIF()